[project]
name = "moxmoe-epub-manga-repacker"
version = "0.5.6"
description = "A manga repacker of EPUB comics downloaded from vol.moe/mox.moe/kox.moe."
license = "MIT"
requires-python = ">=3.10"
dependencies = ["rich", "lxml", "tenacity", "filedate"]

[tool.poetry]
name = "moxmoe-epub-manga-repacker"
version = "0.5.6"
description = "A manga repacker of EPUB comics downloaded from vol.moe/mox.moe/kox.moe."
authors = ["Haoyi HAN <54799247+Haoyi-Han@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.7.1"
lxml = "^5.2.2"
tenacity = "^8.3.0"
filedate = "^3.0"


[tool.poetry.group.dev.dependencies]
pywin32 = "^306"
comtypes = "^1.4.4"
setuptools = "^70.0.0"
cx-freeze = "^7.0.0"
nuitka = "^2.3.3"
zstandard = "^0.22.0"


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"


[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-arm64", "osx-64"]

[tool.pixi.dependencies]
python = ">=3.10"
rich = "*"
lxml = "*"
tenacity = "*"
nuitka = "*"


[tool.pixi.pypi-dependencies]
filedate = "*"


[tool.pixi.target.win-64.host-dependencies]
pywin32 = "*"
comtypes = "*"


[tool.pixi.tasks]
main = "python ./main.py"
clean = "python ./main.py -cl"
build = "make build BUILD_SYS=pixi"


[tool.pixi.target.win-64.tasks]
build = "pwsh ./make.ps1 build -e pixi"


[build-system]
# Uncomment the following two lines if you choose to use Poetry
# requires = ["poetry-core"]
# build-backend = "poetry.core.masonry.api"

# Uncomment the following two lines if you choose to use Pixi
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
select = ["I"]
