[project]
name = "moxmoe-epub-manga-repacker"
version = "0.6.0"
description = "A manga repacker of EPUB comics downloaded from vol.moe/mox.moe/kox.moe."
authors = [
    { name = "Haoyi HAN", email = "54799247+Haoyi-Han@users.noreply.github.com" },
]
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "filedate>=3.0",
    "lxml>=5.3.0",
    "rich>=13.9.4",
    "tenacity>=9.0.0",
    "typer>=0.15.1",
]

[tool.poetry]
package-mode = false
requires-poetry = ">=2.0"

[tool.poetry.group.dev.dependencies]
pywin32 = "*"
comtypes = "^1.4.9"
setuptools = "^72.1.0"
nuitka = "^2.6.1"
zstandard = "^0.23.0"


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"


[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-arm64", "osx-64"]

[tool.pixi.dependencies]
python = ">=3.10"
rich = "*"
lxml = "*"
tenacity = "*"
nuitka = "*"


[tool.pixi.pypi-dependencies]
filedate = "*"


[tool.pixi.target.win-64.host-dependencies]
pywin32 = "*"
comtypes = "*"


[tool.pixi.tasks]
main = "python main.py"
help = "python main.py --help"
clean = "python main.py clean --all"
build = "make build BUILD_SYS=pixi"


[tool.pixi.target.win-64.tasks]
build = "pwsh make.ps1 build -e pixi"


# [build-system]
# Comment all if you choose to use Uv

# Uncomment the following two lines if you choose to use Poetry
# requires = ["poetry-core"]
# build-backend = "poetry.core.masonry.api"

# Uncomment the following two lines if you choose to use Pixi
# requires = ["setuptools >= 64"]
# build-backend = "setuptools.build_meta"

[tool.ruff]
lint.select = ["I"]
line-length = 120

[dependency-groups]
dev = ["nuitka>=2.6.1"]
win-64 = ["comtypes>=1.4.9", "pywin32>=308"]
